fix: Replace deprecated Gemini 1.5 models with 2.0/2.5 series to fix 404 errors